kubernetes/components/common/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: not-used
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
